Gap issues in Dashboard

--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -6543,6 +6543,7 @@ button {
     margin-right: auto;
     width: 22.563rem;
     height: 15.813rem;
+    padding: 0 10px 0 10px;
   }
 }
 
